# car-indicators

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2022_07_24_2346-49839da70229_inintial.py
car_indicators/: config.py  main.py
car_indicators/db/: base.py  core_dal.py  global_dal.py
car_indicators/db/user/: manager.py  model.py  schema.py
car_indicators/email/: base.py  send_reset_password.py  send_verify_email.py
car_indicators/routers/: user.py
tests/: conftest.py  test.env  test_car_indicators.py
tests/unit_tests/: test_start.py
tests/unit_tests/user_test/: test_fastapi_user.py  user_conf_test.py
