[tool.poetry]
name = "car-indicators"
version = "0.1.0"
description = ""
authors = ["Vlad <vlad_ss1994@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.1"}
loguru = "^0.6.0"
asyncpg = "^0.26.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
python-dotenv = "^0.20.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
SQLAlchemy = {extras = ["mypy"], version = "^1.4.39"}
requests = "^2.28.1"
aiosqlite = "^0.17.0"
trio = "^0.21.0"
hypothesis = "^6.52.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
